# semester-thesis

code/: colab_batch_train.ipynb  pyproject.toml
code/libs/ml-static/: pyproject.toml
code/libs/ml-static/configs/: conf_mlflow.yaml  conf_model_HetGAT.yaml  conf_model_HetGAT_no_preproc_anaheim.yaml  conf_model_HetGAT_no_preproc_sioux_falls.yaml  conf_model_HetGAT_preproc_anaheim.yaml  conf_model_HetGAT_preproc_sioux_falls.yaml  conf_model_chicago_preproc.yaml  conf_model_linear_init.yaml  conf_model_rbf_init.yaml  conf_run.yaml  experiment_suite.yaml
code/libs/ml-static/src/ml_static/: __init__.py  batch_runner.py  conf_mlflow.yaml  conf_model_HetGAT.yaml  conf_run.yaml  config.py  context_manager.py  data.py  early_stopping.py  encoders.py  factories.py  losses.py  model.py  reporting.py  run.py  tracker.py  training.py
code/libs/ml-static/src/ml_static/models/: HetGAT.py  HetGAT_OD_init.py  HetGAT_no_preproc.py  HetGAT_preproc.py  __init__.py  attention.py  base.py  encoders.py  factory.py  predictors.py  preprocessors.py
code/libs/ml-static/src/ml_static/models/components/: __init__.py  attention.py  edge_processors.py  encoders.py  initializers.py  mlp.py  od_initializers.py  predictors.py  preprocessors.py
code/libs/ml-static/src/ml_static/transforms/: __init__.py  builders.py  post.py  scalers.py  sequential.py
code/libs/ml-static/src/ml_static/utils/: __init__.py  project.py  validation.py
code/libs/scenario-generation/: pyproject.toml
code/libs/scenario-generation/src/scenario_generation/: __init__.py  conv_to_gpkg.py  generate_scenarios.py  scenarios.py
code/libs/static-assignment/: pyproject.toml
code/libs/static-assignment/src/static_assignment/: __init__.py  conv_to_aequilibrae.py  run_sta.py  sta.py  sta_run.py  sta_test.py  test_sta.py
code/networks/anaheim/: anaheim_master.gpkg
code/networks/chicago/: net.tntp  nodes.tntp
code/networks/sioux_falls/: links.R  sioux_falls_master.gpkg  sioux_falls_network.geojson  sioux_falls_nodes.csv  sioux_falls_nodes.geojson  sioux_falls_wkt_links.csv
code/src/semester/converters/: conv_to_aequilibrae.py  conv_to_gpkg.py
code/src/semester/runners/: run_sta.py
code/src/semester/scenarios/: generate_scenarios.py
code/traffic_assignment/user_equilibrium/: assignment.py  builders.py  loaders.py  user_equilibrium.py
